--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": {
     "name": "Shashank Bairy R",
     "email": "shashank.bairy04@gmail.com",
-    "url": "https://shashankbairy.com/"
+    "url": "https://shashankbairy.netlify.app/"
   },
   "license": "MIT",
   "bugs": {
