--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git://github.com/BA1RY/shashankbairy.com.git"
   },
   "author": {
-    "name": "Shashank Bairy R",
+    "name": "Shashank Bairy",
     "email": "shashank.bairy04@gmail.com",
     "url": "https://shashankbairy.netlify.app/"
   },
